pictor (2.13) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 01 Mar 2011 03:12:28 -0600

pictor (2.12-0ubuntu1) natty; urgency=low

  * debian/pictor.links, index.php: rename "assets" to "silk"; gives some
    credit to the silk project and perhaps less generic than "assets"
  * index.php: fix back/next links in table

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 01 Mar 2011 03:12:25 -0600

pictor (2.11-0ubuntu1) natty; urgency=low

  * debian/pictor.links, index.php: rename "icons" link to "assets",
    seems that apache2 module "alias" often aliases "icons" directory

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 02 Feb 2011 09:22:35 -0800

pictor (2.10-0ubuntu1) natty; urgency=low

  * debian/control, debian/dirs => debian/pictor.dirs, debian/install =>
    debian/pictor.install, debian/links => debian/pictor.links,
    debian/pictor-unload.install, debian/pictor-unload.manpages,
    debian/postinst => debian/pictor.postinst, debian/postrm =>
    debian/pictor.postrm:
    - separate pictor-unload to a separate, stand-alone package
  * debian/rules: install manpages
  * debian/control, debian/rules: migrate to debhelper 7
  * pictor-unload.1: fix formatting

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 31 Jan 2011 18:03:16 -0600

pictor (2.9-0ubuntu1) natty; urgency=low

  * index.php, settings.php: change default flipbook image size from
    640 to 800; add a configurable variable to control this
  * index.php: move upper bar to just below picture, to try and get more
    of the image on the first page; darken the background color
  * debian/control, debian/copyright, debian/install, debian/links,
    index.php, next.png, prev.png: use the new famfamfam-silk package
  * debian/control, debian/copyright: fix lintian warnings

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 14 Dec 2010 11:47:58 -0600

pictor (2.8-0ubuntu1) maverick; urgency=low

  * debian/install, pictor-unload, pictor-unload.1: add a script that