@@ -1,6 +1,10 @@
 pictor (2.13) unreleased; urgency=low
 
-  * UNRELEASED
+  * index.php:
+    - remove table borders around thumbnails
+    - make the thumbnails view full screen
+    - use a film icon for video clips
+    - update copyright
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 01 Mar 2011 03:12:28 -0600
 
